--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "jsx": "react",
     "experimentalDecorators": true,
+    "types": ["jest", "@testing-library/jest-dom"],
     "lib": [
       "dom",
       "es2017"
